Ajout des boutons pour sauvegarder et recharger un projet

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
         <pre id="generatedCode"><code></code></pre>
         <div id="output"></div>
       </div>
+      <div id="zoneCentrale">
+      	<div id="buttons">
+	    <button id="saveButton">💾 Sauvegarder</button>
+	    <button id="loadButton">🔄 Recharger</button>
+	    <input type="file" id="fileInput" accept=".json">
+  	</div>
       <div id="blocklyDiv"></div>
+      </div>
     </div>
   </body>
 </html>
