Sélection du générateur de code par 2 boutons dédiés sur la page : STM32 / Arduino

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 	    <button id="saveButton">💾 Sauvegarder</button>
 	    <button id="loadButton">🔄 Recharger</button>
 	    <input type="file" id="fileInput" accept=".json">
+	    <button id="stm32generator">STM32Gen</button>	    	    
+	    <button id="arduinogenerator">ArduinoGen</button>	    	    	    
   	</div>
       <div id="blocklyDiv"></div>
       </div>
