Export du code généré dans un fichier texte Ajout d'un bouton dédié + code javascript pour générer le fichier de sortie

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 	    <input type="file" id="fileInput" accept=".json">
 	    <button id="stm32generator">STM32Gen</button>	    	    
 	    <button id="arduinogenerator">ArduinoGen</button>	    	    	    
+	    <button id="exportgenerated">💾 Export</button>
   	</div>
       <div id="blocklyDiv"></div>
       </div>
