#9 ajout d'un bouton qui envoie le code à un serveur qui ecoute en local sur le port 3001 (ce serveur sera cahrgé de créer le fichier entete)

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 	    <button id="stm32generator">STM32Gen</button>	    	    
 	    <button id="arduinogenerator">ArduinoGen</button>	    	    	    
 	    <button id="exportgenerated">💾 Export</button>
+	    <button id="send2Qt">Send2Qt</button>
   	</div>
       <div id="blocklyDiv"></div>
       </div>
